# 42

./: .gitmodules
42_Advanced/PythonForDataScience/0_Starting/ex00/: Hello.py
42_Advanced/PythonForDataScience/0_Starting/ex01/: format_ft_time.py
42_Advanced/PythonForDataScience/0_Starting/ex02/: find_ft_type.py
42_Advanced/PythonForDataScience/0_Starting/ex03/: NULL_not_found.py
42_Advanced/PythonForDataScience/0_Starting/ex04/: whatis.py
42_Advanced/PythonForDataScience/0_Starting/ex05/: building.py
42_Advanced/PythonForDataScience/0_Starting/ex06/: filterstring.py  ft_filter.py
42_Advanced/PythonForDataScience/0_Starting/ex07/: sos.py
42_Advanced/PythonForDataScience/0_Starting/ex08/: Loading.py
42_Advanced/PythonForDataScience/0_Starting/ex09/: LICENSE  README.md  pyproject.toml
42_Advanced/PythonForDataScience/0_Starting/ex09/ft_package/: count_in_list.py
42_Advanced/PythonForDataScience/1_Array/ex00/: give_bmi.py
42_Advanced/PythonForDataScience/1_Array/ex01/: array2D.py
42_Advanced/PythonForDataScience/1_Array/ex03/: load_image.py  zoom.py
42_Advanced/PythonForDataScience/1_Array/ex04/: load_image.py  rotate.py
42_Advanced/PythonForDataScience/1_Array/ex05/: load_image.py  pimp_image.py  tester.py
42_Advanced/PythonForDataScience/2_DataTable/ex01/: aff_life.py
42_Advanced/PythonForDataScience/2_DataTable/ex02/: aff_pop.py  load_csv.py
42_Advanced/PythonForDataScience/2_DataTable/ex03/: projection_life.py
42_Advanced/PythonForDataScience/3_OOP/ex00/: S1E9.py
42_Advanced/PythonForDataScience/3_OOP/ex01/: S1E7.py  tester.py
(+9 files in other folders)
