[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ft_package"
version = "0.0.1"
description = " A sample test package"
authors = [ { name = "Guillaume Sailé" }, { email = "gsaile@student.42Mulhouse.fr"} ]
license = { text = "MIT" }
requires-python = ">=3.10"